# okf-lint

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  justfile
.github/workflows/: ci.yml  main.yml  release.yml
docs/knowledge/: cli.md  concept-checks.md  deployment.md  dev-tooling.md  fmt.md  foundation.md  index-checks.md  index.md  integration-tests.md  log-checks.md  orchestration.md  style-checks.md
planning/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  okf-lint-spec.md
planning/implementation/: deep_implement_config.json  usage.md
planning/implementation/code_review/: section-01-diff.md  section-01-interview.md  section-01-review.md  section-02-diff.md  section-02-interview.md  section-02-review.md  section-03-diff.md  section-03-interview.md  section-03-review.md  section-04-diff.md  section-04-interview.md  section-04-review.md  section-05-diff.md  (+11 more)
planning/reviews/: iteration-1-codex.md
planning/sections/: index.md  section-01-foundation.md  section-02-concept-checks.md  section-03-index-checks.md  section-04-log-checks.md  section-05-style-checks.md  section-06-orchestration.md  section-07-cli.md  section-08-integration-tests.md
src/: cli.rs  diagnostic.rs  fmt.rs  frontmatter.rs  lint.rs  main.rs  walk.rs
src/checks/: index_md.rs  log_md.rs  mod.rs  okf.rs  style.rs  style_fix.rs
tests/: cli_tests.rs
tests/snapshots/: cli_tests__integration_bundle_whole_output_matches_snapshot.snap
(+47 files in other folders)
