[package]
name = "okf-lint"
version = "0.1.1"
edition = "2024"
description = "A CLI linter that validates markdown documentation bundles against the Open Knowledge Format (OKF) specification, plus a fixed set of markdown hygiene rules."
license-file = "LICENSE.md"
authors = ["Ryan Moore <ryan.moore@greyrocksoft.com>"]
repository = "https://github.com/rpmoore/okf-lint"
readme = "README.md"
keywords = ["okf", "linter", "markdown", "cli", "documentation"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde_yaml_ng = "0.10"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
tempfile = "3"
